[gd_scene load_steps=22 format=3 uid="uid://blwxkirithfm5"]

[ext_resource type="PackedScene" uid="uid://dxqf1q2tbm0g6" path="res://plot_grid.tscn" id="1_8cs12"]
[ext_resource type="Script" uid="uid://bjgohq03vprob" path="res://in_game.gd" id="1_nvoy2"]
[ext_resource type="PackedScene" uid="uid://u1fpctegbgkl" path="res://assets/models/plants/maple_tree.blend" id="2_pj0gh"]
[ext_resource type="PackedScene" uid="uid://7ociifiv4r5w" path="res://assets/models/plants/bare_tree.blend" id="3_nvoy2"]
[ext_resource type="PackedScene" uid="uid://beya1mxvfyo56" path="res://assets/models/plants/oak_tree.blend" id="4_bjxrw"]
[ext_resource type="PackedScene" uid="uid://8a6mq4vh2hwf" path="res://assets/models/plants/pine_tree.blend" id="5_aud66"]
[ext_resource type="LabelSettings" uid="uid://dh00kuqhiwhlf" path="res://in_game_ui/thick_label.tres" id="7_aud66"]
[ext_resource type="PackedScene" uid="uid://jekspltxusij" path="res://in_game_ui/plant_list.tscn" id="7_bjxrw"]
[ext_resource type="PackedScene" uid="uid://dw3bvdi2mjexj" path="res://in_game_ui/resources_display.tscn" id="7_e5igo"]
[ext_resource type="PackedScene" uid="uid://07jrafpcx8n3" path="res://in_game_ui/game_over_ui.tscn" id="7_ywj4u"]
[ext_resource type="Script" uid="uid://c4eha4xtvsdt5" path="res://player_resources.gd" id="10_e5igo"]
[ext_resource type="Script" uid="uid://coqeceooiqtoq" path="res://player_action_handler.gd" id="11_6cqls"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_ig7tw"]

[sub_resource type="Sky" id="Sky_0xm2m"]
sky_material = SubResource("PhysicalSkyMaterial_ig7tw")

[sub_resource type="Environment" id="Environment_ig7tw"]
background_mode = 2
sky = SubResource("Sky_0xm2m")
ambient_light_source = 2
ambient_light_color = Color(0.7647059, 0.60535043, 0.38686022, 1)
ambient_light_energy = 1.45
reflected_light_source = 2
ssao_enabled = true
ssil_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ig7tw"]

[sub_resource type="Gradient" id="Gradient_ig7tw"]
colors = PackedColorArray(0.41156307, 0.63671875, 0.3503577, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0xm2m"]
noise_type = 0
frequency = 0.0188
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_h2yge"]
noise = SubResource("FastNoiseLite_0xm2m")
color_ramp = SubResource("Gradient_ig7tw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
albedo_color = Color(0.32257125, 0.56640625, 0.20623337, 1)
albedo_texture = SubResource("NoiseTexture2D_h2yge")

[sub_resource type="PlaneMesh" id="PlaneMesh_ig7tw"]
material = SubResource("StandardMaterial3D_1bvp3")
size = Vector2(100, 100)

[node name="InGame" type="Node3D" unique_id=1135904850 node_paths=PackedStringArray("player_resources", "turn_timer")]
script = ExtResource("1_nvoy2")
player_resources = NodePath("PlayerResources")
turn_timer = NodePath("TurnTimer")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1774615528]
environment = SubResource("Environment_ig7tw")
camera_attributes = SubResource("CameraAttributesPractical_ig7tw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1430492129]
transform = Transform3D(-0.99197024, 0.123142764, -0.02882519, 0.004255168, 0.26028615, 0.9655221, 0.12639984, 0.95764667, -0.25872016, 11.28017, 16.19982, 0)
shadow_enabled = true

[node name="PlotGrid" parent="." unique_id=202275922 instance=ExtResource("1_8cs12")]

[node name="Camera3D" type="Camera3D" parent="." unique_id=67232452]
transform = Transform3D(-3.2772245e-08, 0.66173077, -0.7497416, 2.8925164e-08, 0.7497416, 0.66173077, 1, 3.5527137e-15, -4.371139e-08, -8.7790365, 8.524717, 0)
projection = 1
size = 11.526
far = 68.08

[node name="Ground" type="MeshInstance3D" parent="." unique_id=1387877182]
mesh = SubResource("PlaneMesh_ig7tw")

[node name="Trees" type="Node3D" parent="." unique_id=1802192417]

[node name="stage_15" parent="Trees" unique_id=1722436478 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, 7.043109, 0, -11.141009)

[node name="stage_14" parent="Trees" unique_id=1352186800 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, -3.2663803, 0, -6.474677)

[node name="stage_3" parent="Trees" unique_id=387783337 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, 8.005007, 0, 1.5987319)

[node name="stage_4" parent="Trees" unique_id=2001691855 instance=ExtResource("2_pj0gh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.975657, 0, -6.214982)

[node name="stage_5" parent="Trees" unique_id=2128020740 instance=ExtResource("3_nvoy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.718752, 0, -2.0507867)

[node name="stage_6" parent="Trees" unique_id=1421674369 instance=ExtResource("4_bjxrw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.788504, 0, 5.1078854)

[node name="stage_7" parent="Trees" unique_id=260253050 instance=ExtResource("5_aud66")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.642611, 0, 3.7978008)

[node name="stage_9" parent="Trees" unique_id=2074897826 instance=ExtResource("4_bjxrw")]
transform = Transform3D(0.625338, 0, 0.780354, 0, 1, 0, -0.780354, 0, 0.625338, 1.0844164, 0, 6.191943)

[node name="stage_12" parent="Trees" unique_id=362370031 instance=ExtResource("4_bjxrw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.771941, 0, 4.5154657)

[node name="stage_13" parent="Trees" unique_id=735008663 instance=ExtResource("4_bjxrw")]
transform = Transform3D(0.28301117, 0, 0.95911664, 0, 1, 0, -0.95911664, 0, 0.28301117, -6.2957735, 0, -5.2943316)

[node name="stage_11" parent="Trees" unique_id=1479093705 instance=ExtResource("4_bjxrw")]
transform = Transform3D(-0.10921386, 0, 0.99401826, 0, 1, 0, -0.99401826, 0, -0.10921386, -6.0191813, 0, 3.727974)

[node name="stage_10" parent="Trees" unique_id=1376253917 instance=ExtResource("4_bjxrw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4587297, 0, -5.4116573)

[node name="stage_8" parent="Trees" unique_id=1737320304 instance=ExtResource("4_bjxrw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.1160226, 0, -3.594814)

[node name="stage_16" parent="Trees" unique_id=316787328 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, -0.6565056, 0, -8.638966)

[node name="stage_25" parent="Trees" unique_id=1915600492 instance=ExtResource("2_pj0gh")]
transform = Transform3D(-0.12516004, 0, -0.9921365, 0, 1, 0, 0.9921365, 0, -0.12516004, -8.370851, 0, -3.619823)

[node name="stage_17" parent="Trees" unique_id=1525566186 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, -6.0672226, 0, -1.6368566)

[node name="stage_18" parent="Trees" unique_id=631616076 instance=ExtResource("4_bjxrw")]
transform = Transform3D(0.28301117, 0, 0.95911664, 0, 1, 0, -0.95911664, 0, 0.28301117, 2.6796522, 0, -7.2039976)

[node name="stage_19" parent="Trees" unique_id=1109952804 instance=ExtResource("4_bjxrw")]
transform = Transform3D(0.28301117, 0, 0.95911664, 0, 1, 0, -0.95911664, 0, 0.28301117, -2.9220324, 0, 5.7817287)

[node name="stage_20" parent="Trees" unique_id=1976012927 instance=ExtResource("5_aud66")]
transform = Transform3D(0.8196023, 0, 0.5729329, 0, 1, 0, -0.5729329, 0, 0.8196023, 3.4650903, 0, 5.282011)

[node name="stage_21" parent="Trees" unique_id=741722824 instance=ExtResource("5_aud66")]
transform = Transform3D(0.8196023, 0, 0.5729329, 0, 1, 0, -0.5729329, 0, 0.8196023, 3.5854325, 0, -5.7091637)

[node name="stage_22" parent="Trees" unique_id=1279005146 instance=ExtResource("3_nvoy2")]
transform = Transform3D(0.88501203, 0, 0.46556818, 0, 1, 0, -0.46556818, 0, 0.88501203, -0.87412834, 0, -5.2197742)

[node name="stage_23" parent="Trees" unique_id=1728107908 instance=ExtResource("3_nvoy2")]
transform = Transform3D(0.69448256, 0, 0.71950954, 0, 1, 0, -0.71950954, 0, 0.69448256, 5.6243043, 0, 2.1210463)

[node name="stage_24" parent="Trees" unique_id=1872163492 instance=ExtResource("3_nvoy2")]
transform = Transform3D(0.42231765, 0, -0.9064479, 0, 1, 0, 0.9064479, 0, 0.42231765, -6.209261, 0, 1.4792264)

[node name="stage_26" parent="Trees" unique_id=2109179987 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.6613773, 0, -0.75005335, 0, 1, 0, 0.75005335, 0, 0.6613773, -4.903923, 0, 7.5491977)

[node name="stage_27" parent="Trees" unique_id=1882517600 instance=ExtResource("2_pj0gh")]
transform = Transform3D(0.9603521, 0, 0.27878994, 0, 1, 0, -0.27878994, 0, 0.9603521, -0.7320919, 0, 6.9073777)

[node name="GameOverUI" parent="." unique_id=500616179 instance=ExtResource("7_ywj4u")]
visible = false
mouse_filter = 1

[node name="UI" type="Control" parent="." unique_id=491443847]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=1984069187]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ResourcesDisplay" parent="UI/MarginContainer" unique_id=1822500984 instance=ExtResource("7_e5igo")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" unique_id=1458709373]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer" unique_id=664693969]
layout_mode = 2
text = "Plants"
label_settings = ExtResource("7_aud66")

[node name="PlantList" parent="UI/MarginContainer/VBoxContainer" unique_id=786901242 instance=ExtResource("7_bjxrw")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TurnTimer" type="Timer" parent="." unique_id=2114133274]

[node name="PlayerResources" type="Node" parent="." unique_id=1907158032]
script = ExtResource("10_e5igo")

[node name="PlayerActionHandler" type="Node" parent="." unique_id=671668340 node_paths=PackedStringArray("player_resources")]
script = ExtResource("11_6cqls")
player_resources = NodePath("../PlayerResources")

[connection signal="plant_selected" from="UI/MarginContainer/VBoxContainer/PlantList" to="." method="_on_plant_list_plant_selected"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
